2006-11-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/md.c (md_cleanup): Removed unnecessary var initialization.

	* src/munged/crypto.c (crypto_init): Tweaked err msg verbage.

2006-11-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/enc.c (enc_mac): Reverted assertion after mac_final().

2006-11-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/enc.c (enc_validate_msg): Added check to ensure the MAC
	  would generate a DEK of sufficient length for the cipher.
	* src/munged/dec.c (dec_unpack_outer): Added check to ensure the MAC
	  would generate a DEK of sufficient length for the cipher.
	* src/libmunge/munge_ctx.3.in: Updated documentation for
	  MUNGE_CIPHER_AES256 to note that it requires MUNGE_MAC_SHA256.

	* src/munged/conf.c (create_subkeys): Moved check for minimum length
	  of keyfile from _conf_open_keyfile() in order for it to be performed
	  on the number of bytes processed instead of the size of the file.

	* src/munged/random.c (HAVE_LIBGCRYPT:_random_read_seed):
	  Removed warning if seed does not exist.

	* src/munged/conf.c (_conf_open_keyfile): Added check for minimum
	  length of keyfile.
	* src/libcommon/munge_defs.h: Added MUNGE_MINIMUM_SECRET_KEY_LEN.

2006-11-01  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_crypto_lib.m4: Changed default crypto lib to
	  OpenSSL due to better performance.
	* QUICKSTART: Updated.

	* : Reduced memory requirements for replay cache.
	* src/libcommon/munge_defs.h: Added MUNGE_MINIMUM_MD_LEN.
	* src/munged/replay.c (replay_insert, replay_remove):
	  Changed replay_key.data.mac[] to only store the first
	  MUNGE_MINIMUM_MD_LEN bytes of the credential's MAC.

2006-10-31  Chris Dunlap  <cdunlap@llnl.gov>

	* TODO: Updated.

	* : Added support for MUNGE_CIPHER_AES256 and MUNGE_MAC_SHA256.
	* configure.ac, config/config.h.in: Added OpenSSL function checks for
	  EVP_aes_256_cbc() and EVP_sha256().
	* src/libcommon/munge_defs.h: Updated MUNGE_MAXIMUM_KEY_LEN and
	  MUNGE_MAXIMUM_MD_LEN.