@@ -46,6 +46,7 @@
 
 typedef struct {
     gcry_md_hd_t        ctx;
+    int                 len;
 #ifndef NDEBUG
     int                 magic;
     int                 finalized;
@@ -61,6 +62,7 @@ typedef struct {
 
 typedef struct {
     EVP_MD_CTX          ctx;
+    int                 len;
 #ifndef NDEBUG
     int                 magic;
     int                 finalized;
